# API-Distribu-da-com-Replica-o

./: README.md
files_Novo/: Cargo.toml  Dockerfile  README.md  api.rs  docker-compose.yml  main.rs  models.rs  nginx.conf  relatorio_trabalho_final.docx  storage.rs  sync.rs
