[package]
name    = "projeto-sd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "servidor"
path = "src/main.rs"

[dependencies]
axum        = "0.7"
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
reqwest     = { version = "0.12", features = ["json"] }
uuid        = { version = "1",   features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }
tower-http  = { version = "0.5", features = ["cors"] }
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
